--- a/ci/build.yml
+++ b/ci/build.yml
@@ -18,6 +18,7 @@ run:
   args:
   - -exc
   - |
+    export TERM=linux
     cd pal-tracker
     chmod +x gradlew
     ./gradlew -P version=$(cat ../version/number) build
